Favor `toList` over `.collect(Collectors.toList())`